LPS-39158 - Fix radio buttons/input like items from being cut off in form navigator

--- a/portal-web/docroot/html/css/taglib/form_navigator.css
+++ b/portal-web/docroot/html/css/taglib/form_navigator.css
@@ -7,8 +7,12 @@
 		display: none;
 	}
 
-	.form-navigator-content[class*="span"] {
-		margin-left: 0;
+	.form-navigator-content{
+		padding-left: 2px;
+
+		&[class*="span"] {
+			margin-left: 0;
+		}
 	}
 
 	.section-modified .modified-notice {
